# road_runner

./: .gitignore  LICENSE  README.md  pyproject.toml
adapters/: cpu_diag.yaml  mem_diag.yaml
diags/: mem_test_stub.py  mprime_stub.py
docs/: quickstart.md
flows/: sample_flow.yaml
margins/: sample_margin.yaml
policy/: safety.yaml
policy/profiles/: genoa.yaml
src/road_runner/: __init__.py  adapters.py  artifacts.py  cli.py  config.py  exceptions.py  exporter.py  models.py  paths.py  reporting.py  runner.py  safety.py  sysinfo.py  utils.py
templates/: report.html.j2  report.md.j2
tests/: test_config.py  test_runner.py  test_safety.py
